--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html ng-app="StackApp">
-	<head><title>OpenStack App</title></head>
+	<head>
+	    <style>
+        body {
+            background-color: #d0e4fe;
+        }
+
+        h1 {
+            color: orange;
+            text-align: center;
+        }
+
+        p {
+            font-family: "Times New Roman";
+            font-size: 20px;
+        }
+        </style>
+	    <title>OpenStack App</title>
+	</head>
 	<body ng-controller="MainStack as ctrl">
 		<h1>Disparar Servidor</h1>
 		<form name="frmServer">
