--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 
         h1 {
             color: orange;
-            text-align: center;
+            text-align: left;
         }
 
         p {
